--- a/index.html
+++ b/index.html
@@ -164,5 +164,7 @@
       <p class="contact-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo iusto quae veritatis impedit accusamus dolorum debitis sint a, deserunt laboriosam ullam sit magni possimus nesciunt!</p>
       <a class="contact-link" href="#">Write us</a>
     </section>
+
+    <img width="250px" src="https://cdn.pixabay.com/photo/2022/05/28/06/39/cat-7226671_1280.jpg" alt="cat">
   </body>
 </html>
