--- a/index.html
+++ b/index.html
@@ -166,5 +166,7 @@
     </section>
 
     <img width="250px" src="https://cdn.pixabay.com/photo/2022/05/28/06/39/cat-7226671_1280.jpg" alt="cat">
+
+    <img src="./img/cat-7226671_1280.webp" width="250px" alt="cat 2">
   </body>
 </html>
