--- a/index.html
+++ b/index.html
@@ -9,46 +9,37 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
     />
     <link rel="stylesheet" href="./styles/styles.css" />
-    <title>Document</title>
+    <title>Flexbox</title>
   </head>
-
   <body>
-    <!-- <ul class="list">
-      <li class="list-item">
-        <a class="list-link">Ссылка 1</a>
-      </li>
-      <li class="list-item">
-        <a class="list-link">Ссылка 2</a>
-      </li>
-      <li class="list-item">
-        <a class="list-link">Ссылка 3</a>
-      </li>
-    </ul>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, ducimus?
-    </p> -->
 
-    <ul class="list">
-      <li class="list-item">1</li>
-      <li class="list-item">2</li>
-      <li class="list-item">3</li>
-      <li class="list-item">4</li>
-      <li class="list-item">5</li>
-      <li class="list-item">6</li>
-      <li class="list-item">7</li>
-      <li class="list-item">8</li>
-      <li class="list-item">9</li>
-      <li class="list-item">10</li>
-      <li class="list-item">1</li>
-      <li class="list-item">2</li>
-      <li class="list-item">3</li>
-      <li class="list-item">4</li>
-      <li class="list-item">5</li>
-      <li class="list-item">6</li>
-      <li class="list-item">7</li>
-      <li class="list-item">8</li>
-      <li class="list-item">9</li>
-      <li class="list-item">10</li>
-    </ul>
+    <nav class="nav">
+        <!-- <h2 class="logo">Logo</h2> -->
+
+        <ul class="nav-list">
+            <li class="nav-list-item order1">
+                <a href="#" class="nav-list-item-link">Home</a>
+            </li>
+            <li class="nav-list-item order3">
+                <a href="#" class="nav-list-item-link">About</a>
+            </li>
+            <li class="nav-list-item ">
+                <a href="#" class="nav-list-item-link">Contacts</a>
+            </li>
+            <li class="nav-list-item order2">
+                <a href="#" class="nav-list-item-link">Products</a>
+            </li>
+            <li class="nav-list-item order1">
+                <a href="#" class="nav-list-item-link">Partners</a>
+            </li>
+        </ul>
+
+    </nav>
+<!-- 
+    <main>
+        <aside class="sidebar"></aside>
+        <section class="section"></section>
+    </main> -->
+
   </body>
 </html>
